Fixed mobile view.  Made overflow-x hidden on html and body to remove space on right side of screen.  Created rules for screensize less than 400 for portfolio card width.

--- a/styles2.css
+++ b/styles2.css
@@ -1,3 +1,7 @@
+html, body {
+	overflow-x: hidden;
+}
+
 body {
 	
 	height: 100%;
@@ -432,4 +436,10 @@ footer p {
 		width: 22rem;
 	}
 
+}
+
+@media screen and (max-width: 400px){
+	.card {
+		width: 18rem;
+	}
 }
